Date colors not showing fix

--- a/src/app/components/check/check.component.css
+++ b/src/app/components/check/check.component.css
@@ -65,7 +65,7 @@
 }
 
 .example-custom-date-class {
-  background: orange;
+  background: orange !important;
   border-radius: 100%;
 }
 
